Fixed Linkedin href in Contact Info block

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
               <div class="contact-info__block">
                 <a
-                  href="www.linkedin.com/in/vira-vakhovska"
-                  rel="author"
+                  href="https://www.linkedin.com/in/vira-vakhovska"
+                  target="_blank"
                   class="contact-info__item"
                 >
                   <div class="contact-info__item-icon-wrapper">
@@ -150,8 +150,8 @@
                       </div>
                       <div class="experiences__company-description">
                         <p class="experiences__company-description-text">
-                          During my <span>internship</span>, I honed my web development
-                          skills, focusing on self-management, task
+                          During my <span>internship</span>, I honed my web
+                          development skills, focusing on self-management, task
                           prioritization, and teamwork. Responsibilities
                           included:
                         </p>
@@ -199,11 +199,11 @@
                       </div>
                       <div class="experiences__company-description">
                         <p class="experiences__company-description-text">
-                          Achieved <span>1st place</span> as part of Team AVVAO in the
-                          development of a creative solution for the e-Veteran
-                          chat bot, along with its administration panel. The
-                          primary goal of the project was to come up with an
-                          innovative approach to help.
+                          Achieved <span>1st place</span> as part of Team AVVAO
+                          in the development of a creative solution for the
+                          e-Veteran chat bot, along with its administration
+                          panel. The primary goal of the project was to come up
+                          with an innovative approach to help.
                         </p>
                         <ul class="experiences__company-responsibilities">
                           <li>
