feat: add GitFit project

--- a/index.html
+++ b/index.html
@@ -90,19 +90,37 @@
 												></path>
 											</svg>
 										</div>
-										<p class="intro_text">
-											Hey there, I'm Vira. I started as a markup developer, focused on
-											achieving pixel-perfect design. My university studies led me into C#,
-											where I worked extensively with Windows Forms and was proud of what I
-											could achieve within just that framework. Later, I expanded into
-											ASP.NET Core because of my love for web development. Through my
-											studies, I gained a strong foundation in core software engineering,
-											covering algorithms, data structures, databases, and software
-											architecture. A fun fact about me: I enjoy using JavaScript and
-											TypeScript across platforms—including websites, mobile applications,
-											and even game development. With this passion and background, I'm
-											aiming to work as a full stack developer.
-										</p>
+										<div class="intro__block">
+											<p class="intro__text">
+												Hey there, I'm Vira. I started as a markup developer, focused on
+												achieving pixel-perfect design. My university studies led me into
+												<span class="highlighted-text">C#</span>, where I worked with
+												Windows Forms (a
+												<span class="highlighted-text">.NET</span> library), and I am proud
+												of what I managed to achieve with only this library. Later, I
+												expanded into
+												<span class="highlighted-text">ASP.NET Core</span> because of my
+												love for web development.
+											</p>
+											<p class="intro__text">
+												Through my studies, I gained a strong foundation in core software
+												engineering, covering algorithms, data structures, databases, and
+												software architecture. A fun fact about me: I enjoy using
+												<span class="highlighted-text">JavaScript</span> (<span
+													class="highlighted-text"
+													>TypeScript</span
+												>) across platforms – including websites, mobile applications (<span
+													class="highlighted-text"
+													>React Native</span
+												>), and even game development (<span class="highlighted-text"
+													>Rune</span
+												>).
+											</p>
+											<p class="intro__text">
+												With this passion and background, I'm excited to keep growing as a
+												full stack developer, building apps that matter.
+											</p>
+										</div>
 									</div>
 								</div>
 							</div>
@@ -276,6 +294,30 @@
 							<div class="resume__block">
 								<div class="projects">
 									<h3 class="projects__header">Projects</h3>
+
+									<a
+										href="https://github.com/BinaryStudioAcademy/bsa-2024-gitfit"
+										target="_blank"
+										class="project"
+									>
+										<h3 class="project__name">GitFit</h3>
+										<p class="project__description">
+											<span class="highlighted-text"
+												>Full Stack Developer on a team of 15.</span
+											><br />
+											This application is designed to collect and analyze developer
+											activity in Git-based repositories, focusing on Git commits to
+											provide insights into productivity and contributor performance.
+										</p>
+										<p class="project__technologies">
+											<strong>Tech Stack:</strong><br />
+											<strong>All:</strong> TypeScript, Zod<br />
+											<strong>Backend:</strong> NodeJS, Fastify, Knex & Objection,
+											PostgreSQL<br />
+											<strong>Frontend:</strong> React, Redux Toolkit, CSS<br />
+											<strong>Infrastructure:</strong> AWS, GitHub Actions
+										</p>
+									</a>
 
 									<a
 										href="https://github.com/kolibri753/FitnessApp/tree/redux"
